# VSCodeExtensionsManager

./: Dockerfile  Makefile  README.md  docker-compose.yml  extensions.json  extensions.md  extensions.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  update.yml
script/: auto_update.sh  bulk_install.sh  bulk_uninstall.sh  convert.py  install.sh  listup.sh  restore.sh  uninstall.sh  update_setting.py
