[tool.poetry]
name = "vscodeextensionsmanager"
version = "0.1.0"
description = ""
authors = ["faronan"]

[tool.poetry.dependencies]
python = "^3.10"
pytablewriter = "^0.64.1"
bs4 = "^0.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
